Interpreter/tests/negative-examples/recursiveNew.cl
class Main inherits IO {
  main() : Object { 
    new A
  } ;
} ; 

class A {
  x : A <- new A;


};
